# geoai-asset-detection-platform

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: buildings.whu-taos.example.yaml  roads.example.yaml  roads.hf-unet-new-mexico.example.yaml  roads.new-mexico.example.yaml  training.whu-taos.example.yaml  workflows.example.yaml
scripts/: create_demo_assets.py  docker_entrypoint.py  download_hf_building_model.py  download_hf_road_model.py  export_training_chips.py  fetch_new_mexico_cog.py  load_cog_footprints.py  train_building_model.py
sql/: init.sql
src/geoai_roads/: __init__.py  api.py  cli.py  config.py  inference.py  masking.py  orchestrator.py  postgis.py  threshold_sweep.py  tiling.py  training.py  training_data.py  training_web.py  vectorize.py
tests/: test_masking.py  test_model_backend.py  test_training_data.py  test_training_web.py  test_vectorize_quality_filters.py
